# dialog-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: backend-dialog.rs  backend-stdio.rs  backend-zenity.rs  input.rs  message.rs  password.rs  question.rs
src/: error.rs  lib.rs
src/backends/: dialog.rs  kdialog.rs  mod.rs  stdio.rs  zenity.rs
tests/: dialog.rs  message.rs
